--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "node prisma/seed.js"
   },
   "dependencies": {
     "@prisma/client": "^3.8.1",
@@ -20,7 +20,6 @@
     "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
     "prisma": "^3.8.1",
-    "tailwindcss": "^3.0.15",
-    "ts-node": "^10.4.0"
+    "tailwindcss": "^3.0.15"
   }
 }
