--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "seed": "node prisma/seed.js"
   },
   "dependencies": {
-    "@prisma/client": "^3.8.1",
+    "@prisma/client": "^3.13.0",
+    "bcryptjs": "^2.4.3",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -19,7 +20,7 @@
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
-    "prisma": "^3.8.1",
+    "prisma": "^3.13.0",
     "tailwindcss": "^3.0.15"
   }
 }
